// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTotalEffectString Lv255超（炎の上限） 1`] = `
"非戦闘時パワー: +675
戦闘時ダメージ追加: +23"
`;

exports[`getTotalEffectString お守り整備×4 + 究極のお守り 1`] = `
"パワー: +23.8% ～ +122.3%
非戦闘時パワー: +8.5%
非戦闘時パワー: +27
防御: +3.4% ～ +39.4%
非戦闘時防御: +14.3%
戦闘時行動回数: +2.4%
気合: +13.5%
敵パワー減少: -1.8%
敵防御減少: -4.4%
与ダメージ増加: 9.3%
覚悟与ダメージ増加: +1.1%
戦闘時ダメージ追加: +7
被ダメージ軽減: 2.6%
ターン1ダメージ軽減: 48.1%
ピンチダメージ軽減: 最大6.9%
被ダメージ乱数幅: 14% ～ 168%
クリティカル率（割合）: +5.4%
覚悟クリティカル率（割合）: +5.4%
クリティカル率（固定）: +0.8%
クリティカルダメージ: +5.4%
敵クリティカル率: -10.8%
敵クリティカルダメージ: -10.8%
決死の覚悟効果量: +13.5%
決死の覚悟発動体力: 16.2%以下
ターン1アイテム装備
アイテム装備率: +13.5%
毒食べ物回避率: 10.8%
悪アイテム回避率: +4.2%
武器効果量: +33.6%
防具効果量: +33.6%
食べ物効果量: +39.8%
毒効果量軽減: 28.5%
アイテム気合上昇率: +15%
アイテム気合低下率: -13%
ターン内最大ダメージ: +4.8%
連続攻撃中断回避率: +8.1%
戦闘時凍結率: 2.4%
戦闘時被ダメージ半減率: 4.8%
戦闘時敵行動回数低下率: 8%
戦闘時固定ダメージ付与率: 4%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.3
負けそうな時逃げる ×3
不運チャージ ×0.3
通常時RPG進行数: ×4
お守り耐久減少率: 19.8%

合計攻撃効果（最大）: +202.3%
合計防御効果（平均）: 55%"
`;

exports[`getTotalEffectString わかばのお守り 1`] = `
"パワー: +61.2%
防御: +45.2%

合計攻撃効果（最大）: +61.2%
合計防御効果（平均）: 31.1%"
`;

exports[`getTotalEffectString カスタムお守り（5パーツ） 1`] = `
"パワー: +23.3% ～ +35.6%
非戦闘時パワー: +101.3
防御: +10%
与ダメージ増加: 26.4%
戦闘時ダメージ追加: +23
被ダメージ軽減: 16.7%
クリティカル率（割合）: +20%
クリティカル率（固定）: +13%
クリティカルダメージ: +20%
ターン1アイテム装備
継戦融合武装: アイテム攻撃上昇の55%を次ターンへ
通常時RPG進行数: ×2

合計攻撃効果（最大）: +119.2%
合計防御効果（平均）: 25.8%"
`;

exports[`getTotalEffectString スキルなし 1`] = `""`;

exports[`getTotalEffectString スキル効果3倍: お守り整備×4 + 究極のお守り 1`] = `
"パワー: +90.4% ～ +812.8%
非戦闘時パワー: +26.5%
非戦闘時パワー: +81
防御: +10.8% ～ +160.8%
非戦闘時防御: +47%
戦闘時行動回数: +7.2%
気合: +40.5%
敵パワー減少: -5.2%
敵防御減少: -12.3%
与ダメージ増加: 29.3%
覚悟与ダメージ増加: +3.2%
戦闘時ダメージ追加: +19
被ダメージ軽減: 7.5%
ターン1ダメージ無効
ターン2ダメージ軽減: 44.3%
ピンチダメージ軽減: 最大20.7%
被ダメージ乱数幅: 2% ～ 144%
クリティカル率（割合）: +16.2%
覚悟クリティカル率（割合）: +16.2%
クリティカル率（固定）: +2.4%
クリティカルダメージ: +16.2%
敵クリティカル率: -32.4%
敵クリティカルダメージ: -32.4%
決死の覚悟効果量: +40.5%
決死の覚悟発動体力: 20.1%以下
ターン1アイテム装備
アイテム装備率: +40.5%
毒食べ物回避率: 32.4%
悪アイテム回避率: +12.6%
武器効果量: +115.5%
防具効果量: +115.5%
食べ物効果量: +139%
毒効果量軽減: 58.2%
アイテム気合上昇率: +45%
アイテム気合低下率: -31%
ターン内最大ダメージ: +14.4%
連続攻撃中断回避率: +24.3%
戦闘時凍結率: 7.2%
戦闘時被ダメージ半減率: 14.4%
戦闘時敵行動回数低下率: 24%
戦闘時固定ダメージ付与率: 12%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.9
負けそうな時逃げる ×9
不運チャージ ×0.9
通常時RPG進行数: ×10
お守り耐久減少率: 19.8%

合計攻撃効果（最大）: +2175%
合計防御効果（平均）: 90.7%"
`;

exports[`getTotalEffectString スキル効果3倍: カスタムお守り（5パーツ） 1`] = `
"パワー: +111.7% ～ +175.2%
非戦闘時パワー: +303.8
防御: +54.5%
与ダメージ増加: 88%
戦闘時ダメージ追加: +69
被ダメージ軽減: 28.6%
クリティカル率（割合）: +60%
クリティカル率（固定）: +19%
クリティカルダメージ: +60%
ターン1アイテム装備
継戦融合武装: アイテム攻撃上昇の55%を次ターンへ
通常時RPG進行数: ×4

合計攻撃効果（最大）: +885.6%
合計防御効果（平均）: 54.7%"
`;

exports[`getTotalEffectString スキル効果3倍: スキルなし 1`] = `""`;

exports[`getTotalEffectString スキル効果3倍: 上位構成: 武器型 + 究極 1`] = `
"パワー: +106.1% ～ +269.9%
非戦闘時パワー: +8.5%
非戦闘時パワー: +27
防御: +78.9% ～ +141.3%
非戦闘時防御: +14.3%
戦闘時行動回数: +2.4%
気合: +13.5%
敵パワー減少: -1.8%
敵防御減少: -4.4%
与ダメージ増加: 9.3%
覚悟与ダメージ増加: +1.1%
戦闘時ダメージ追加: +7
被ダメージ軽減: 11.3%
ターン1ダメージ軽減: 8.1%
ピンチダメージ軽減: 最大6.9%
被ダメージ乱数幅: 14% ～ 168%
クリティカル率（割合）: +5.4%
覚悟クリティカル率（割合）: +5.4%
クリティカル率（固定）: +10.8%
クリティカルダメージ: +5.4%
敵クリティカル率: -10.8%
敵クリティカルダメージ: -10.8%
決死の覚悟効果量: +13.5%
決死の覚悟発動体力: 16.2%以下
ターン1アイテム装備
アイテム装備率: +150%
継戦融合武装: アイテム攻撃上昇の55%を次ターンへ
武器のみを使用
毒食べ物回避率: 10.8%
悪アイテム回避率: +4.2%
武器効果量: +139.3%
防具効果量: +49.3%
食べ物効果量: +56.3%
毒効果量軽減: 36%
アイテム気合上昇率: +28.5%
アイテム気合低下率: -22.2%
ターン内最大ダメージ: +4.8%
連続攻撃中断回避率: +8.1%
戦闘時凍結率: 2.4%
戦闘時被ダメージ半減率: 4.8%
戦闘時敵行動回数低下率: 8%
戦闘時固定ダメージ付与率: 4%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.3
負けそうな時逃げる ×3
不運チャージ ×0.3
通常時RPG進行数: ×4

合計攻撃効果（最大）: +576.1%
合計防御効果（平均）: 77.3%"
`;

exports[`getTotalEffectString スキル効果3倍: 上位構成: 速散数粘急 + 究極 1`] = `
"パワー: +69.9% ～ +275.4%
非戦闘時パワー: +8.5%
非戦闘時パワー: +27
防御: +27.4% ～ +71.8%
非戦闘時防御: +14.3%
戦闘時行動回数: +2.4%
気合: +13.5%
敵パワー減少: -1.8%
敵防御減少: -4.4%
与ダメージ増加: 9.3%
覚悟与ダメージ増加: +1.1%
戦闘時ダメージ追加: +7
被ダメージ軽減: 11.3%
ターン1ダメージ軽減: 8.1%
ピンチダメージ軽減: 最大81.9%
被ダメージ乱数幅: 14% ～ 168%
クリティカル率（割合）: +65.4%
覚悟クリティカル率（割合）: +5.4%
クリティカル率（固定）: +19.8%
クリティカルダメージ: +65.4%
敵クリティカル率: -10.8%
敵クリティカルダメージ: -10.8%
決死の覚悟効果量: +13.5%
決死の覚悟発動体力: 16.2%以下
ターン1アイテム装備
アイテム装備率: +13.5%
毒食べ物回避率: 10.8%
悪アイテム回避率: +4.2%
武器効果量: +33.6%
防具効果量: +33.6%
食べ物効果量: +39.8%
毒効果量軽減: 28.5%
アイテム気合上昇率: +15%
アイテム気合低下率: -13%
ターン内最大ダメージ: +4.8%
連続攻撃中断回避率: +8.1%
戦闘時凍結率: 2.4%
戦闘時被ダメージ半減率: 4.8%
戦闘時敵行動回数低下率: 8%
戦闘時固定ダメージ付与率: 4%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.3
負けそうな時逃げる ×3
不運チャージ ×0.3
通常時RPG進行数: ×7

合計攻撃効果（最大）: +922.4%
合計防御効果（平均）: 78.4%"
`;

exports[`getTotalEffectString スキル効果3倍: 乱数系: 与ダメージ安定感5 1`] = `
"パワー: +49%
防御: +12%
与ダメージ乱数幅: 90% ～ 135%

合計攻撃効果（最大）: +67.6%
合計防御効果（平均）: 10.7%"
`;

exports[`getTotalEffectString スキル効果3倍: 乱数系: 被ダメージ不安定 + 運命不変のお札 1`] = `
"パワー: +16.5%
防御: +12%
与ダメージ乱数固定: 100%
被ダメージ乱数幅: 0% ～ 160%

合計攻撃効果（最大）: +16.5%
合計防御効果（平均）: 28.6%"
`;

exports[`getTotalEffectString スキル効果3倍: 曜日のお守り（罪スキル入り） 1`] = `
"パワー: -23% ～ +156.3%
防御: -23% ～ +156.3%
被ダメージ軽減: 9.1%
クリティカル率（割合）: +60%
クリティカル率（固定）: +19%
クリティカルダメージ: +100%
開始時体力半減

合計攻撃効果（最大）: +426.9%
合計防御効果（平均）: 64.5%"
`;

exports[`getTotalEffectString スキル単体: お守り整備 1`] = `"お守り耐久減少率: 66.7%"`;

exports[`getTotalEffectString スキル単体: お腹が空いてから食べる 1`] = `
"パワー: +4%
食べ物効果量: +20%
毒効果量軽減: 16.7%
残体力依存食べ物選択

合計攻撃効果（最大）: +4%"
`;

exports[`getTotalEffectString スキル単体: かるわざ 1`] = `
"パワー: +12%
防御: +6%

合計攻撃効果（最大）: +12%
合計防御効果（平均）: 5.7%"
`;

exports[`getTotalEffectString スキル単体: すぐ決死の覚悟をする 1`] = `
"与ダメージ増加: 8%
覚悟与ダメージ増加: +5%
覚悟クリティカル率（割合）: +20%
決死の覚悟効果量: +50%
決死の覚悟発動体力: 21.4%以下

合計攻撃効果（最大）: +19.1%"
`;

exports[`getTotalEffectString スキル単体: クリティカル性能上昇 1`] = `
"クリティカル率（割合）: +20%
クリティカル率（固定）: +3%
クリティカルダメージ: +20%

合計攻撃効果（最大）: +11.5%"
`;

exports[`getTotalEffectString スキル単体: シールドバッシュ 1`] = `
"シールドバッシュ: 防具防御上昇量に応じてパワー上昇
防具効果量: +50%"
`;

exports[`getTotalEffectString スキル単体: スロースタート 1`] = `"スロースタート"`;

exports[`getTotalEffectString スキル単体: テキパキこなす 1`] = `
"非戦闘時パワー: +22%

合計攻撃効果（最大）: +22%"
`;

exports[`getTotalEffectString スキル単体: バーサク 1`] = `
"パワー: +0% ～ +24%
毎ターン体力減少: 15%

合計攻撃効果（最大）: +24%"
`;

exports[`getTotalEffectString スキル単体: パワーアップ 1`] = `
"パワー: +11%

合計攻撃効果（最大）: +11%"
`;

exports[`getTotalEffectString スキル単体: 不運チャージ 1`] = `
"パワー: +7%
防御: +7%
不運チャージ

合計攻撃効果（最大）: +7%
合計防御効果（平均）: 6.5%"
`;

exports[`getTotalEffectString スキル単体: 与ダメージ不安定 1`] = `
"与ダメージ乱数幅: 5% ～ 225%
クリティカル率（固定）: +2%

合計攻撃効果（最大）: +17.3%"
`;

exports[`getTotalEffectString スキル単体: 与ダメージ安定感5 1`] = `
"与ダメージ乱数幅: 90% ～ 135%

合計攻撃効果（最大）: +12.5%"
`;

exports[`getTotalEffectString スキル単体: 伝説 1`] = `
"パワー: +8%
防御: +8%

合計攻撃効果（最大）: +8%
合計防御効果（平均）: 7.4%"
`;

exports[`getTotalEffectString スキル単体: 値切り術 1`] = `"ショップ割引率: 10%"`;

exports[`getTotalEffectString スキル単体: 傲慢の力 1`] = `""`;

exports[`getTotalEffectString スキル単体: 光属性剣攻撃 1`] = `
"パワー: +4%
非戦闘時防御: +9%
戦闘時被ダメージ半減率: 18%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 16.5%"
`;

exports[`getTotalEffectString スキル単体: 光属性剣攻撃＋ 1`] = `
"パワー: +4%
非戦闘時防御: +15%
戦闘時被ダメージ半減率: 30%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 26.1%"
`;

exports[`getTotalEffectString スキル単体: 分散型 1`] = `
"パワー: +10%
防御: +10%
被ダメージ軽減: 9.1%
クリティカル率（固定）: +10%

合計攻撃効果（最大）: +21%
合計防御効果（平均）: 17.4%"
`;

exports[`getTotalEffectString スキル単体: 土属性剣攻撃 1`] = `
"パワー: +0% ～ +9%
ターン内最大ダメージ: +18%

合計攻撃効果（最大）: +9%"
`;

exports[`getTotalEffectString スキル単体: 土属性剣攻撃＋ 1`] = `
"パワー: +0% ～ +15%
ターン内最大ダメージ: +30%

合計攻撃効果（最大）: +15%"
`;

exports[`getTotalEffectString スキル単体: 天国か地獄か 1`] = `
"パワー: -16.7% ～ +20%
防御: -16.7% ～ +20%

合計攻撃効果（最大）: +20%
合計防御効果（平均）: 16.7%"
`;

exports[`getTotalEffectString スキル単体: 嫉妬の力 1`] = `""`;

exports[`getTotalEffectString スキル単体: 強敵と戦うのが好き 1`] = `
"パワー: +0% ～ +10%
防御: +0% ～ +10%

合計攻撃効果（最大）: +10%
合計防御効果（平均）: 9.1%"
`;

exports[`getTotalEffectString スキル単体: 強欲の力 1`] = `""`;

exports[`getTotalEffectString スキル単体: 怠惰の力 1`] = `""`;

exports[`getTotalEffectString スキル単体: 慎重 1`] = `
"与ダメージ減少: 3.8%
被ダメージ軽減: 16.7%

合計防御効果（平均）: 16.7%"
`;

exports[`getTotalEffectString スキル単体: 憤怒の力 1`] = `"開始時体力半減"`;

exports[`getTotalEffectString スキル単体: 投稿数ボーナス量アップ 1`] = `
"パワー: +0% ～ +10%
防御: +0% ～ +10%

合計攻撃効果（最大）: +10%
合計防御効果（平均）: 9.1%"
`;

exports[`getTotalEffectString スキル単体: 攻めの守勢 1`] = `
"パワー: +4%
がまんパワーアップ

合計攻撃効果（最大）: +4%"
`;

exports[`getTotalEffectString スキル単体: 数取りの達人 1`] = `""`;

exports[`getTotalEffectString スキル単体: 敵のクリティカル性能減少 1`] = `
"パワー: +4%
防御: +0% ～ +10%
敵クリティカル率: -40%
敵クリティカルダメージ: -40%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 9.1%"
`;

exports[`getTotalEffectString スキル単体: 暴食の力 1`] = `""`;

exports[`getTotalEffectString スキル単体: 武器が大好き 1`] = `
"武器のみを使用
武器効果量: +70%"
`;

exports[`getTotalEffectString スキル単体: 毒属性剣攻撃 1`] = `
"敵パワー減少: -5.3%
敵防御減少: -5.3%

合計攻撃効果（最大）: +5.6%
合計防御効果（平均）: 5.3%"
`;

exports[`getTotalEffectString スキル単体: 気合で頑張る 1`] = `
"パワー: +6%
防御: +6%
気合: +50%

合計攻撃効果（最大）: +6%
合計防御効果（平均）: 5.7%"
`;

exports[`getTotalEffectString スキル単体: 気性が荒い 1`] = `
"パワー: +25%
非戦闘時パワー: -40%

合計攻撃効果（最大）: +25%"
`;

exports[`getTotalEffectString スキル単体: 気性穏やか 1`] = `
"パワー: -25%
非戦闘時パワー: +70%

合計攻撃効果（最大）: +27.5%"
`;

exports[`getTotalEffectString スキル単体: 水属性剣攻撃 1`] = `""`;

exports[`getTotalEffectString スキル単体: 氷属性剣攻撃 1`] = `
"パワー: +4%
非戦闘時防御: +9%
戦闘時凍結率: 9%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 16.5%"
`;

exports[`getTotalEffectString スキル単体: 氷属性剣攻撃＋ 1`] = `
"パワー: +4%
非戦闘時防御: +15%
戦闘時凍結率: 15%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 26.1%"
`;

exports[`getTotalEffectString スキル単体: 油断しない 1`] = `
"パワー: +4%
ターン1ダメージ軽減: 40%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 5.7%"
`;

exports[`getTotalEffectString スキル単体: 準備を怠らない 1`] = `
"ターン1アイテム装備

合計攻撃効果（最大）: +1%
合計防御効果（平均）: 2%"
`;

exports[`getTotalEffectString スキル単体: 炎属性剣攻撃 1`] = `
"非戦闘時パワー: +101.3
戦闘時ダメージ追加: +23"
`;

exports[`getTotalEffectString スキル単体: 炎属性剣攻撃＋ 1`] = `
"非戦闘時パワー: +168.8
戦闘時ダメージ追加: +39"
`;

exports[`getTotalEffectString スキル単体: 疲れにくい 1`] = `
"パワー: +4%
非戦闘時防御: +27%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 21.3%"
`;

exports[`getTotalEffectString スキル単体: 粘り強い 1`] = `
"パワー: +4%
ピンチダメージ軽減: 最大25%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 12.5%"
`;

exports[`getTotalEffectString スキル単体: 継戦融合武装 1`] = `"継戦融合武装: アイテム攻撃上昇の55%を次ターンへ"`;

exports[`getTotalEffectString スキル単体: 脳筋 1`] = `
"与ダメージ増加: 20%
被ダメージ増加: 10%

合計攻撃効果（最大）: +20%"
`;

exports[`getTotalEffectString スキル単体: 被ダメージ不安定 1`] = `
"パワー: +4%
被ダメージ乱数幅: 0% ～ 160%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 20%"
`;

exports[`getTotalEffectString スキル単体: 被ダメージ安定感 1`] = `
"パワー: +4%
被ダメージ乱数幅: 20% ～ 160%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 10%"
`;

exports[`getTotalEffectString スキル単体: 負けそうなら逃げる 1`] = `
"パワー: +4%
負けそうな時逃げる

合計攻撃効果（最大）: +4%"
`;

exports[`getTotalEffectString スキル単体: 超全力の一撃 1`] = `
"全力の一撃ダメージ: +30%

合計攻撃効果（最大）: +4.3%"
`;

exports[`getTotalEffectString スキル単体: 連続・毎日ボーナス強化 1`] = `
"パワー: +5%
防御: +5%

合計攻撃効果（最大）: +5%
合計防御効果（平均）: 4.8%"
`;

exports[`getTotalEffectString スキル単体: 連続攻撃完遂率上昇 1`] = `
"パワー: +0% ～ +10.7%
連続攻撃中断回避率: +32%

合計攻撃効果（最大）: +10.7%"
`;

exports[`getTotalEffectString スキル単体: 道具の扱いが上手い 1`] = `
"武器効果量: +40%
防具効果量: +40%
食べ物効果量: +40%
毒効果量軽減: 28.6%
アイテム気合上昇率: +40%
アイテム気合低下率: -28.6%"
`;

exports[`getTotalEffectString スキル単体: 道具の選択が上手い 1`] = `
"毒食べ物回避率: 40%
悪アイテム回避率: +15%
武器効果量: +15%
防具効果量: +15%
食べ物効果量: +15%
毒効果量軽減: 13%
アイテム気合上昇率: +15%
アイテム気合低下率: -13%"
`;

exports[`getTotalEffectString スキル単体: 道具大好き 1`] = `
"アイテム装備率: +50%

合計攻撃効果（最大）: +1.2%
合計防御効果（平均）: 2.4%"
`;

exports[`getTotalEffectString スキル単体: 道具大好き＋ 1`] = `
"アイテム装備率: +90%

合計攻撃効果（最大）: +2.2%
合計防御効果（平均）: 4.3%"
`;

exports[`getTotalEffectString スキル単体: 闇属性剣攻撃 1`] = `
"パワー: +4%
非戦闘時防御: +10.5%
戦闘時敵行動回数低下率: 30%
戦闘時固定ダメージ付与率: 15%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 9.5%"
`;

exports[`getTotalEffectString スキル単体: 闇属性剣攻撃＋ 1`] = `
"パワー: +4%
非戦闘時防御: +17.5%
戦闘時敵行動回数低下率: 50%
戦闘時固定ダメージ付与率: 25%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 14.9%"
`;

exports[`getTotalEffectString スキル単体: 防具が大好き 1`] = `
"パワー: +4%
防具のみを使用
防具効果量: +70%

合計攻撃効果（最大）: +4%"
`;

exports[`getTotalEffectString スキル単体: 防御アップ 1`] = `
"パワー: +4%
防御: +13%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 11.5%"
`;

exports[`getTotalEffectString スキル単体: 防御貫通+10% 1`] = `
"敵防御減少: -10.7%

合計攻撃効果（最大）: +12%"
`;

exports[`getTotalEffectString スキル単体: 雷属性剣攻撃 1`] = `
"与ダメージ増加: 9%

合計攻撃効果（最大）: +9%"
`;

exports[`getTotalEffectString スキル単体: 雷属性剣攻撃＋ 1`] = `
"与ダメージ増加: 15%

合計攻撃効果（最大）: +15%"
`;

exports[`getTotalEffectString スキル単体: 風属性剣攻撃 1`] = `
"非戦闘時パワー: +9%
戦闘時行動回数: +9%

合計攻撃効果（最大）: +18.8%"
`;

exports[`getTotalEffectString スキル単体: 風属性剣攻撃＋ 1`] = `
"非戦闘時パワー: +15%
戦闘時行動回数: +15%

合計攻撃効果（最大）: +32.2%"
`;

exports[`getTotalEffectString スキル単体: 食いしんぼう 1`] = `
"パワー: +4%
食べ物のみを使用
食べ物効果量: +70%
毒効果量軽減: 37.5%

合計攻撃効果（最大）: +4%"
`;

exports[`getTotalEffectString スキル単体: 高速RPG 1`] = `
"パワー: +1% ～ +11.1%
通常時RPG進行数: ×2

合計攻撃効果（最大）: +11.1%"
`;

exports[`getTotalEffectString スキル単体: ７フィーバー！ 1`] = `
"パワー: +0% ～ +7%
防御: +0% ～ +7%
与ダメージ７の倍数化
７ステータスダメージ軽減

合計攻撃効果（最大）: +7%
合計防御効果（平均）: 6.5%"
`;

exports[`getTotalEffectString ステータス逆転の色 1`] = `
"パワー: +11%
パワー・防御 ステータス逆転

合計攻撃効果（最大）: +11%"
`;

exports[`getTotalEffectString バーサク / スロースタート / しあわせのお守り 1`] = `
"パワー: +11% ～ +37.6%
全力の一撃ダメージ: +30%
毎ターン体力減少: 15%
スロースタート

合計攻撃効果（最大）: +43.5%"
`;

exports[`getTotalEffectString 上位構成: 武器型 + 究極 1`] = `
"パワー: +16.6% ～ +42.2%
非戦闘時パワー: +2.8%
非戦闘時パワー: +9
防御: +11.2% ～ +22.4%
非戦闘時防御: +4.6%
戦闘時行動回数: +0.8%
気合: +4.5%
敵パワー減少: -0.6%
敵防御減少: -1.5%
与ダメージ増加: 3%
覚悟与ダメージ増加: +0.4%
戦闘時ダメージ追加: +3
被ダメージ軽減: 9.8%
ターン1ダメージ軽減: 2.7%
ピンチダメージ軽減: 最大2.3%
被ダメージ乱数幅: 18% ～ 176%
クリティカル率（割合）: +1.8%
覚悟クリティカル率（割合）: +1.8%
クリティカル率（固定）: +10.3%
クリティカルダメージ: +1.8%
敵クリティカル率: -3.6%
敵クリティカルダメージ: -3.6%
決死の覚悟効果量: +4.5%
決死の覚悟発動体力: 14.9%以下
ターン1アイテム装備
アイテム装備率: +54.5%
継戦融合武装: アイテム攻撃上昇の55%を次ターンへ
武器のみを使用
毒食べ物回避率: 3.6%
悪アイテム回避率: +1.4%
武器効果量: +84.2%
防具効果量: +10.7%
食べ物効果量: +12.6%
毒効果量軽減: 11.2%
アイテム気合上昇率: +5%
アイテム気合低下率: -4.8%
ターン内最大ダメージ: +1.6%
連続攻撃中断回避率: +2.7%
戦闘時凍結率: 0.8%
戦闘時被ダメージ半減率: 1.6%
戦闘時敵行動回数低下率: 2.7%
戦闘時固定ダメージ付与率: 1.3%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.1
負けそうな時逃げる
不運チャージ ×0.1
通常時RPG進行数: ×2

合計攻撃効果（最大）: +88.2%
合計防御効果（平均）: 37.6%"
`;

exports[`getTotalEffectString 上位構成: 速散数粘急 + 究極 1`] = `
"パワー: +22.4% ～ +63%
非戦闘時パワー: +2.8%
非戦闘時パワー: +9
防御: +11.2% ～ +22.4%
非戦闘時防御: +4.6%
戦闘時行動回数: +0.8%
気合: +4.5%
敵パワー減少: -0.6%
敵防御減少: -1.5%
与ダメージ増加: 3%
覚悟与ダメージ増加: +0.4%
戦闘時ダメージ追加: +3
被ダメージ軽減: 9.8%
ターン1ダメージ軽減: 2.7%
ピンチダメージ軽減: 最大27.3%
被ダメージ乱数幅: 18% ～ 176%
クリティカル率（割合）: +21.8%
覚悟クリティカル率（割合）: +1.8%
クリティカル率（固定）: +13.3%
クリティカルダメージ: +21.8%
敵クリティカル率: -3.6%
敵クリティカルダメージ: -3.6%
決死の覚悟効果量: +4.5%
決死の覚悟発動体力: 14.9%以下
ターン1アイテム装備
アイテム装備率: +4.5%
毒食べ物回避率: 3.6%
悪アイテム回避率: +1.4%
武器効果量: +10.7%
防具効果量: +10.7%
食べ物効果量: +12.6%
毒効果量軽減: 11.2%
アイテム気合上昇率: +5%
アイテム気合低下率: -4.8%
ターン内最大ダメージ: +1.6%
連続攻撃中断回避率: +2.7%
戦闘時凍結率: 0.8%
戦闘時被ダメージ半減率: 1.6%
戦闘時敵行動回数低下率: 2.7%
戦闘時固定ダメージ付与率: 1.3%
与ダメージ７の倍数化
７ステータスダメージ軽減 ×0.1
負けそうな時逃げる
不運チャージ ×0.1
通常時RPG進行数: ×3

合計攻撃効果（最大）: +132.2%
合計防御効果（平均）: 44%"
`;

exports[`getTotalEffectString 乱数系: 与ダメージ安定感5 1`] = `
"パワー: +11%
与ダメージ乱数幅: 90% ～ 135%

合計攻撃効果（最大）: +24.9%"
`;

exports[`getTotalEffectString 乱数系: 被ダメージ不安定 + 運命不変のお札 1`] = `
"パワー: +4%
与ダメージ乱数固定: 100%
被ダメージ乱数幅: 0% ～ 160%

合計攻撃効果（最大）: +4%
合計防御効果（平均）: 20%"
`;

exports[`getTotalEffectString 勲章各10 1`] = `
"パワー: +22.1%
最大体力: +134
アイテム装備率: +10%
毒食べ物回避率: 10%
悪アイテム回避率: +10%
武器効果量: +10%
防具効果量: +10%
食べ物効果量: +10%
毒効果量軽減: 9.1%
アイテム気合上昇率: +10%
アイテム気合低下率: -9.1%

合計攻撃効果（最大）: +22.4%
合計防御効果（平均）: 13.9%"
`;

exports[`getTotalEffectString 属性全部 + 水 1`] = `
"パワー: +12.5% ～ +22.6%
非戦闘時パワー: +9%
非戦闘時パワー: +101.3
非戦闘時防御: +34%
戦闘時行動回数: +9%
敵パワー減少: -5.3%
敵防御減少: -5.3%
与ダメージ増加: 11.3%
戦闘時ダメージ追加: +23
ターン内最大ダメージ: +18%
戦闘時凍結率: 11.3%
戦闘時被ダメージ半減率: 18%
戦闘時敵行動回数低下率: 30%
戦闘時固定ダメージ付与率: 15%

合計攻撃効果（最大）: +71.2%
合計防御効果（平均）: 43%"
`;

exports[`getTotalEffectString 常時覚醒 + 覚醒変更の札（朱） 1`] = `
"クリティカル率（割合）: +20%
クリティカル率（固定）: +11%
クリティカルダメージ: +35%
アイテム気合低下率: -50%

合計攻撃効果（最大）: +28.8%"
`;

exports[`getTotalEffectString 常時覚醒 + 覚醒変更の札（橙） 1`] = `
"行動回数: +10%
与ダメージ減少: 3.8%
被ダメージ軽減: 28.6%
毒効果量軽減: 50%
アイテム気合低下率: -50%

合計攻撃効果（最大）: +5.8%
合計防御効果（平均）: 28.6%"
`;

exports[`getTotalEffectString 常時覚醒 + 覚醒変更の札（翠） 1`] = `
"アイテム装備率: +110%
毒食べ物回避率: 40%
悪アイテム回避率: +40%
武器効果量: +96%
防具効果量: +96%
食べ物効果量: +96%
毒効果量軽減: 74.5%
アイテム気合上昇率: +96%
アイテム気合低下率: -74.5%

合計攻撃効果（最大）: +6%
合計防御効果（平均）: 10.7%"
`;

exports[`getTotalEffectString 常時覚醒 + 覚醒変更の札（蒼） 1`] = `
"与ダメージ減少: 3.8%
被ダメージ軽減: 37.5%
毒効果量軽減: 50%
アイテム気合低下率: -50%

合計防御効果（平均）: 37.5%"
`;

exports[`getTotalEffectString 常時覚醒 + 超覚醒の札 1`] = `
"パワー: +0% ～ +25%
防御: +0% ～ +25%
行動回数: +20%
毒効果量軽減: 50%
アイテム気合低下率: -50%
覚醒投稿数ボーナス: 無効

合計攻撃効果（最大）: +50%
合計防御効果（平均）: 20%"
`;

exports[`getTotalEffectString 常時覚醒 1`] = `
"パワー: +11%
行動回数: +20%
武器効果量: +40%
防具効果量: +40%
食べ物効果量: +40%
毒効果量軽減: 64.3%
アイテム気合上昇率: +40%
アイテム気合低下率: -64.3%

合計攻撃効果（最大）: +33.2%"
`;

exports[`getTotalEffectString 曜日のお守り（罪スキル入り） 1`] = `
"パワー: -8.3% ～ +45.2%
防御: -8.3% ～ +45.2%
被ダメージ軽減: 9.1%
クリティカル率（割合）: +20%
クリティカル率（固定）: +13%
クリティカルダメージ: +60%
開始時体力半減

合計攻撃効果（最大）: +90.5%
合計防御効果（平均）: 37.4%"
`;

exports[`getTotalEffectString 虹色のお守り 1`] = `
"パワー: +4%
非戦闘時パワー: +168.8
非戦闘時防御: +15%
与ダメージ増加: 15%
戦闘時ダメージ追加: +39
戦闘時凍結率: 15%

合計攻撃効果（最大）: +19.6%
合計防御効果（平均）: 26.1%"
`;

exports[`getTotalEffectString 行動加速のお札 / 全身全霊のお札 / しあわせのお札 1`] = `
"パワー: +11%
行動回数圧縮状態
最低行動回数保障: 5
ランダムステータス: 0

合計攻撃効果（最大）: +11%"
`;

exports[`getTotalEffectString 謎のお守り 1`] = `
"パワー: +15.4%
ピンチダメージ軽減: 最大25%

合計攻撃効果（最大）: +15.4%
合計防御効果（平均）: 12.5%"
`;

exports[`getTotalEffectString 超越のお守り 1`] = `
"パワー: +10%
防御: +10%
被ダメージ軽減: 9.1%
クリティカル率（固定）: +10%

合計攻撃効果（最大）: +21%
合計防御効果（平均）: 17.4%"
`;

exports[`getTotalEffectString 重複: 慎重×3（被ダメージ軽減の下限） 1`] = `
"与ダメージ減少: 10.7%
被ダメージ軽減: 37.5%

合計防御効果（平均）: 37.5%"
`;

exports[`getTotalEffectString 重複: 油断しない×3（ターン1無効） 1`] = `
"パワー: +12.5%
ターン1ダメージ無効
ターン2ダメージ軽減: 20%

合計攻撃効果（最大）: +12.5%
合計防御効果（平均）: 17.1%"
`;

exports[`getTotalEffectString 重複: 粘り強い×5（ピンチ軽減の上限） 1`] = `
"パワー: +21.7%
ピンチダメージ軽減: 最大90%
（体力28%で効果最大）

合計攻撃効果（最大）: +21.7%
合計防御効果（平均）: 62.5%"
`;

exports[`getTotalEffectString 食べ物型 + 暴食 1`] = `
"パワー: +12.5%
ピンチダメージ軽減: 最大25%
アイテム装備率: +50%
食べ物のみを使用
武器効果量: +40%
防具効果量: +40%
食べ物効果量: +166%
毒効果量軽減: 60.3%
アイテム気合上昇率: +40%
アイテム気合低下率: -28.6%
残体力依存食べ物選択

合計攻撃効果（最大）: +14.5%
合計防御効果（平均）: 20.6%"
`;
